# frog2d

./: .clang-format  .gitignore  README.md  TODO  meson.build  meson.options
resources/: meson.build
resources/models/: human.blend  human.frog  meson.build  test_model.frog
resources/models/blender/: human.blend  kek.frog
resources/textures/: meson.build
shaders/: meson.build
src/: main.c  meson.build
src/core/: core.h  core_math.h  core_string.c  core_string.h  file.c  file.h  frog2d_core.h  log.c  log.h  memory_arena.c  memory_arena.h  meson.build  os_memory.h  os_memory_linux.c  os_memory_win32.c  os_path.h  os_path_linux.c  os_path_win32.c  os_time.h  os_time_linux.c  os_time_win32.c  string.h
src/core/types/: hash_map.c  hash_map.h  list.h  meson.build
src/engine/: console.c  console.h  draw.c  draw.h  engine_main.c  engine_main.h  engine_types.h  frog.c  frog.h  image.c  image.h  mesh.c  mesh.h  mesh_internal.h  meson.build  model.h  render_types.h  renderer.c  renderer.h  text.c  text.h
src/engine/internal/: mesh_internal.h
src/engine/shaders/: 2d_color_ssbo.frag  2d_color_ssbo.vert  2d_ssbo.frag  2d_ssbo.vert  2d_text_ssbo.frag  2d_text_ssbo.vert  flat_color.vert  flat_color_edge.frag  flat_color_edge.vert  flat_textured.frag  flat_textured.vert  meson.build
src/game/: DESIGN  game_main.c  game_main.h  meson.build
src/game/shaders/: frog_player.frag  frog_player.vert  hello_triangle.frag  hello_triangle.vert  meson.build  player.vert  tile.frag  tile.vert
src/log/: log.c  log.h  meson.build
src/platform/: meson.build  platform.h  platform_sdl.c  platform_vulkan.h  platform_win32.c
src/vulkan/: meson.build  vulkan_allocator.c  vulkan_allocator.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_context.h  vulkan_global.h  vulkan_image.c  vulkan_image.h  vulkan_memory.c  vulkan_memory.h  vulkan_pass.c  vulkan_pass.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_renderer.c  vulkan_renderer.h  vulkan_texture.c  vulkan_texture.h  vulkan_types.h
test/core/types/: hash_map_test.c  meson.build
tools/: cube.blend  export_frog.py  export_models.py  frog_reference.blend
